Mon Jun 24 22:11:37 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/gdbm/test_gdbm.rb (TestGDBM#test_s_open_nolock):
	  skip a failing test on Windows because flock() implementation is
	  different from Unix.

Mon Jun 24 22:06:14 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* test/rubygems/test_gem_installer.rb (test_install_extension_flat):
	  use ruby in build directory in case ruby is not installed.
	  [ruby-core:53265] [Bug #8058]

Mon Jun 24 22:04:02 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* ext/dl/cfunc.c (rb_dlcfunc_call): fix conversion from Bignum to
	  pointer. sizeof(DLSTACK_TYPE) is larger than sizeof(long) on
	  Windows x64 and higher bits over sizeof(long) of DLSTACK_TYPE was
	  zero even if a pointer value was over 32 bits which causes SEGV on
	  DL::TestCPtr#test_to_ptr_io. Adding a cast solves the bug.

Mon Jun 24 22:04:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* eval_error.c (warn_printf): use rb_vsprintf instead so ruby specific
	  extensions like PRIsVALUE can be used in format strings
	* eval_error.c (error_print): use warn_print_str (alias for
	  rb_write_error_str) to print a string value instead of using
	  RSTRING_PTR and RSTRING_LEN manually
	* eval.c (setup_exception): use PRIsVALUE instead of %s and RSTRING_PTR

Mon Jun 24 20:31:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* compile.c (make_name_for_block): use PRIsVALUE in format string
	  instead of %s and RSTRING_PTR to protect objects from being garbage
	  collected too soon
	* encoding.c (str_to_encindex): ditto
	* hash.c (rb_hash_fetch_m): ditto
	* io.c (rb_io_reopen): ditto
	* parse.y (reg_fragment_check_gen): ditto
	* parse.y (reg_compile_gen): ditto
	* parse.y (ripper_assert_Qundef): ditto
	* re.c (rb_reg_raise): ditto
	* ruby.c (set_option_encoding_once): ditto
	* vm_eval.c (rb_throw_obj): ditto

Mon Jun 24 07:57:18 2013  Masaya Tarui  <tarui@ruby-lang.org>
