@@ -1,3 +1,9 @@
+Mon Jun 24 22:26:31 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>
+
+	* test/rinda/test_rinda.rb (RingIPv6#prepare_ipv6):
+	  ifindex() function may not be implemented on Windows. We use another
+	  check for the case.
+
 Mon Jun 24 22:11:37 2013  Hiroshi Shirosaki  <h.shirosaki@gmail.com>
 
 	* test/gdbm/test_gdbm.rb (TestGDBM#test_s_open_nolock):
